manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: taskapp
spec:
  selector:
    app: taskapp-frontend
  ports:
    - port: 80
      targetPort: 80
